[project]
name = "job-recommendation-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apify-client>=2.5.0",
    "dotenv>=0.9.9",
    "langchain-groq>=1.1.2",
    "mcp[cli]>=1.26.0",
    "pymupdf>=1.27.2.2",
    "streamlit>=1.55.0",
]
